SAVE PUSH: Add IssueView with start and finish etc. (missing: workflow, adding, better UI with average and median and agreedAverage)
